grammar and spacing fixes

--- a/app/assets/stylesheets/abstracts/_roll_card.scss
+++ b/app/assets/stylesheets/abstracts/_roll_card.scss
@@ -39,6 +39,7 @@
 }
 
 .roll_card__avatar {
+  border-right: 1px solid $inset;
   height: 5.5em;
   width: 5.5em;
 }
