--- a/app/assets/stylesheets/partials/_signup-page.scss
+++ b/app/assets/stylesheets/partials/_signup-page.scss
@@ -198,7 +198,7 @@
         padding: 0.25em 0.6em 0;
       }
       .form__submit {
-        margin: 1em 30% 0 0;
+        margin: 1em 43% 0 0;
       }
     }
 
